--- a/mitiv/optim/package-frame.html
+++ b/mitiv/optim/package-frame.html
@@ -14,10 +14,7 @@
 <li><a href="ArmijoLineSearch.html" title="class in mitiv.optim" target="classFrame">ArmijoLineSearch</a></li>
 <li><a href="BLMVM.html" title="class in mitiv.optim" target="classFrame">BLMVM</a></li>
 <li><a href="BoundProjector.html" title="class in mitiv.optim" target="classFrame">BoundProjector</a></li>
-<li><a href="BoxedSet.html" title="class in mitiv.optim" target="classFrame">BoxedSet</a></li>
 <li><a href="ConvexSetProjector.html" title="class in mitiv.optim" target="classFrame">ConvexSetProjector</a></li>
-<li><a href="DoubleBoxedSet.html" title="class in mitiv.optim" target="classFrame">DoubleBoxedSet</a></li>
-<li><a href="FloatBoxedSet.html" title="class in mitiv.optim" target="classFrame">FloatBoxedSet</a></li>
 <li><a href="GeneralBounds.html" title="class in mitiv.optim" target="classFrame">GeneralBounds</a></li>
 <li><a href="LBFGS.html" title="class in mitiv.optim" target="classFrame">LBFGS</a></li>
 <li><a href="LBFGSOperator.html" title="class in mitiv.optim" target="classFrame">LBFGSOperator</a></li>
@@ -28,13 +25,13 @@
 <li><a href="ReverseCommunicationOptimizer.html" title="class in mitiv.optim" target="classFrame">ReverseCommunicationOptimizer</a></li>
 <li><a href="ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim" target="classFrame">ReverseCommunicationOptimizerWithLineSearch</a></li>
 <li><a href="SimpleBounds.html" title="class in mitiv.optim" target="classFrame">SimpleBounds</a></li>
-<li><a href="SimpleBoxedSet.html" title="class in mitiv.optim" target="classFrame">SimpleBoxedSet</a></li>
 <li><a href="SimpleLowerBound.html" title="class in mitiv.optim" target="classFrame">SimpleLowerBound</a></li>
 <li><a href="SimpleUpperBound.html" title="class in mitiv.optim" target="classFrame">SimpleUpperBound</a></li>
 <li><a href="VMLMB.html" title="class in mitiv.optim" target="classFrame">VMLMB</a></li>
 </ul>
 <h2 title="Enums">Enums</h2>
 <ul title="Enums">
+<li><a href="InverseHessianApproximation.html" title="enum in mitiv.optim" target="classFrame">InverseHessianApproximation</a></li>
 <li><a href="LineSearchStatus.html" title="enum in mitiv.optim" target="classFrame">LineSearchStatus</a></li>
 <li><a href="LineSearchTask.html" title="enum in mitiv.optim" target="classFrame">LineSearchTask</a></li>
 <li><a href="OptimStatus.html" title="enum in mitiv.optim" target="classFrame">OptimStatus</a></li>
