--- a/mitiv/exception/RecoverableFormatException.html
+++ b/mitiv/exception/RecoverableFormatException.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/exception/NotImplementedException.html" title="class in mitiv.exception"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception"><span class="strong">NEXT CLASS</span></a></li>
+<li>NEXT CLASS</li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/exception/RecoverableFormatException.html" target="_top">FRAMES</a></li>
@@ -206,7 +206,7 @@ extends java.lang.Exception</pre>
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/exception/NotImplementedException.html" title="class in mitiv.exception"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/exception/SingularOperatorException.html" title="class in mitiv.exception"><span class="strong">NEXT CLASS</span></a></li>
+<li>NEXT CLASS</li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/exception/RecoverableFormatException.html" target="_top">FRAMES</a></li>
