--- a/mitiv/linalg/TruncatedConjugateGradient.html
+++ b/mitiv/linalg/TruncatedConjugateGradient.html
@@ -97,7 +97,7 @@
 <pre>public class <strong>TruncatedConjugateGradient</strong>
 extends java.lang.Object</pre>
 <div class="block">Implement trust region conjugate gradient algorithm of Steihaug.
-
+ 
  References: Trond Steihaug, "The conjugate gradient method and trust regions
  in large scale optimization," SIAM J. Numer. Anal., vol. 20, pp. 626-637
  (1983).</div>
@@ -275,10 +275,10 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>static int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/TruncatedConjugateGradient.html#solveQuadratic(double[], double, double, double)">solveQuadratic</a></strong>(double[]&nbsp;x,
-              double&nbsp;a,
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/TruncatedConjugateGradient.html#solveQuadratic(double, double, double, double[])">solveQuadratic</a></strong>(double&nbsp;a,
               double&nbsp;b,
-              double&nbsp;c)</code>
+              double&nbsp;c,
+              double[]&nbsp;x)</code>
 <div class="block">Compute the roots of a 2nd degree polynomial.</div>
 </td>
 </tr>
@@ -632,27 +632,27 @@ extends java.lang.Object</pre>
 <pre>public&nbsp;void&nbsp;setMaximumIterations(int&nbsp;maxiter)</pre>
 </li>
 </ul>
-<a name="solveQuadratic(double[], double, double, double)">
+<a name="solveQuadratic(double, double, double, double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
 <h4>solveQuadratic</h4>
-<pre>public static&nbsp;int&nbsp;solveQuadratic(double[]&nbsp;x,
-                 double&nbsp;a,
+<pre>public static&nbsp;int&nbsp;solveQuadratic(double&nbsp;a,
                  double&nbsp;b,
-                 double&nbsp;c)</pre>
+                 double&nbsp;c,
+                 double[]&nbsp;x)</pre>
 <div class="block">Compute the roots of a 2nd degree polynomial.
-
+ 
  Solve the quadratic equation:
-
+ 
  a*x^2 + b*x + c = 0
-
+ 
  for real x. The number n of distinct real roots is returned and the roots
  if any are stored into x. If there is no roots, the contents of x is left
  unchanged; otherwise (n = 1 or 2) the two values of x are set with the
  roots in ascending order, i.e. such that x[0] <= x[1].</div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>x</code> - 2-element output array to store the result</dd><dd><code>a</code> - 2nd degree coefficient</dd><dd><code>b</code> - 1st degree coefficient</dd><dd><code>c</code> - 0th degree coefficient</dd>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>a</code> - 2nd degree coefficient</dd><dd><code>b</code> - 1st degree coefficient</dd><dd><code>c</code> - 0th degree coefficient</dd><dd><code>x</code> - 2-element output array to store the result</dd>
 <dt><span class="strong">Returns:</span></dt><dd>The number n of distinct real roots. If n >= 1, then x[0] <=
          x[1]; otherwise (n = 0) and x contents is left unchanged.</dd></dl>
 </li>
